# vlm-rag-chat

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Hayhooks.dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
tests/data/pipelines/: index_recipe_files.yaml  rag_recipe_files.yaml
tests/data/recipe_files/: vegan_flan_recipe.md  vegan_sunflower_hemp_cheese_recipe.txt
vlm_rag_chat/: __init__.py  pipelines.py
